      clicking in the playlist widget. (BR 198650)


VERSION 2.3.1
  CHANGES:
    * Improved responsiveness when expanding/collapsing items in the
      collection browser when using single-click mode.
    * The Collection scanner now runs with idle priority when invoked by
      Amarok. Batch scan users can invoke it with the --idlepriority flag.

  BUGFIXES:
    * File browser: fixed sorting files by date. (BR 226941)
    * Fixed issue with file browser bookmarks not working when the file browser
      was showing "places".
    * Fixed crash when right clicking in file browser while it is showing 
      "Places". (BR 237562)
    * Fixed strange selection behaviour in the music sources pane (BR 222760).
    * Fixed factor used when filtering lengths in collection browser.
    * Fixed wrong value used when filtering comments in collection browser.
    * Don't truncate the "Label:" label in the TagDialog. (BR 235957)
    * Display extended characters properly in names of Last.fm streams.
      (BR 222930)
    * Cover fetcher: prevent automatic fetcher from setting album's cover if
      it is done manually during the download. (BR 236839)
    * File browser: show folders first, files afterwards. Patch by
      <dystopticus@gmx.net>. (BR 226599)
    * Queued track's contextual menu entry about dequeueing was written wrong
      and misleading. (BR 235047)
    * Custom color setting in the On Screen Display was only applied after
      restart. Patch by Frank Steinmetzger <Warp_7@gmx.de>.
    * Track Rating was not always displayed correctly in the On Screen
      Display. Patch by Frank Steinmetzger <Warp_7@gmx.de>.
    * Improved layout for applet setting dialogs. Patch by Felix Geyer
      <debfx-kde@fobos.de>.
    * Made icons in applets react correctly in double-click environments.
      Thanks to Felix Geyer <debfx-kde@fobos.de>.
    * Several bug fixes for the bundled LyricWiki script. Patch by Oleg G
      <verdrehung@gmail.com>. (BR 233605)